feat✨ json 编译完成后直接覆盖前端项目中的json文件

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "compile": "truffle compile",
     "goerli": "truffle migrate --network goerli",
-    "develop": "truffle migrate"
+    "develop": "truffle migrate",
+    "cpjson": "sh cpjson.sh"
   },
   "repository": {
     "type": "git",
