--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "test"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^3.4.1",
     "bip39": "^3.0.3",
     "ethereumjs-util": "^7.0.8",
     "ethereumjs-wallet": "^1.0.1",
+    "safemath": "^1.0.6",
     "secp256k1": "^4.0.2",
     "truffle-hdwallet-provider": "^1.0.17"
   },
