--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bip39": "^3.0.3",
     "ethereumjs-util": "^7.0.8",
     "ethereumjs-wallet": "^1.0.1",
+    "fs-extra": "^4.0.3",
     "safemath": "^1.0.6",
     "secp256k1": "^4.0.2",
     "truffle-hdwallet-provider": "^1.0.17"
@@ -19,7 +20,8 @@
     "compile": "truffle compile",
     "goerli": "truffle migrate --network goerli",
     "develop": "truffle migrate",
-    "cpjson": "sh cpjson.sh"
+    "cpjson": "sh cpjson.sh",
+    "test": "truffle test --network goerli"
   },
   "repository": {
     "type": "git",
