[master] 更新部署地址

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "compile": "truffle compile",
-    "goerli": "truffle migrate --network goerli",
+    "goerli": "truffle migrate --reset --network goerli",
     "develop": "truffle migrate",
     "cpjson": "sh cpjson.sh",
     "test": "truffle test --network goerli"
